--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
-    "push-dir": "^0.4.1"
+    "node-sass": "^4.12.0",
+    "push-dir": "^0.4.1",
+    "sass-loader": "^7.1.0"
   }
 }
