--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "highlight.js": "^9.15.8",
+    "nuxt": "^2.0.0",
+    "vue-parallaxy": "^1.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -22,6 +24,7 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
+    "frontmatter-markdown-loader": "^1.7.0",
     "node-sass": "^4.12.0",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0"
