--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "frontmatter-markdown-loader": "^1.7.0",
     "node-sass": "^4.12.0",
     "push-dir": "^0.4.1",
-    "sass-loader": "^7.1.0"
+    "responsive-loader": "^1.2.0",
+    "sass-loader": "^7.1.0",
+    "sharp": "^0.22.1"
   }
 }
