--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_ACCESS_TOKEN  # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
   target-branch: gh-pages
-  local-dir: dist
+  local-dir: ${TRAVIS_BUILD_DIR}/dist
   on:
