--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate && npm run create:cname",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "create:cname": "node ./scripts/createCname.js",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "precommit": "npm run lint"
   },
