--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "8"
+  - "10"
 
 cache:
   directories:
@@ -12,16 +12,16 @@ branches:
 
 install:
   - npm install
-  - npm run generate
+  - npm run generate 
 
 script:
-  - ls
-  - echo "Skipping tests"
+  - npm run create:cname
 
 deploy:
   provider: pages
-  skip-cleanup: false
+  skip-cleanup: true
   github-token: $GITHUB_ACCESS_TOKEN  # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
   target-branch: gh-pages
-  local-dir: ${TRAVIS_BUILD_DIR}/dist
+  local-dir: dist
   on:
+    branch: master
